--- a/index.html
+++ b/index.html
@@ -181,6 +181,7 @@
         min-width: var(--width);
         min-height: var(--height);
         position: absolute;
+        z-index: 1; 
     }
 
     .download-btn {
@@ -404,6 +405,53 @@
     .input-group label {
         margin: 0;
     }
+
+    /* NEW: Color overlay styles */
+    #colorOverlay {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: transparent;
+        z-index: 2;
+        pointer-events: none;
+    }
+
+    /* NEW: Color picker styling */
+    input[type="color"] {
+        width: 50px;
+        height: 35px;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        cursor: pointer;
+        margin: 5px 0;
+    }
+
+    input[type="range"] {
+        width: 100px;
+        margin: 5px;
+    }
+
+    .overlay-controls {
+        background-color: #f9f9f9;
+        padding: 15px;
+        border-radius: 5px;
+        margin: 15px 0;
+        border-left: 4px solid #004C97;
+    }
+
+    .overlay-row {
+        display: flex;
+        align-items: center;
+        gap: 15px;
+        margin-bottom: 10px;
+    }
+
+    .overlay-row label {
+        margin: 0;
+        font-weight: bold;
+    }
 </style>
 <script>
     $(document).ready(function() {
@@ -411,6 +459,12 @@
         var size = {
             width: 1200,
             height: 400
+        };
+        // NEW: Store overlay settings
+        var overlaySettings = {
+            color: '#000000',
+            opacity: 0.3,
+            enabled: false
         };
         // Store background image
         var backgroundImage = null;
@@ -536,6 +590,42 @@
                 downloadSingleBanner();
             }
         });
+
+        // NEW: Color overlay controls
+        $('#enableOverlay').change(function() {
+            overlaySettings.enabled = $(this).is(':checked');
+            updateColorOverlay();
+        });
+
+        $('#overlayColor').on('input change', function() {
+            overlaySettings.color = $(this).val();
+            updateColorOverlay();
+        });
+
+        $('#overlayOpacity').on('input change', function() {
+            overlaySettings.opacity = parseFloat($(this).val());
+            $('#opacityValue').text(Math.round(overlaySettings.opacity * 100) + '%');
+            updateColorOverlay();
+        });
+
+        // NEW: Function to update the color overlay
+        function updateColorOverlay() {
+            var overlay = $('#colorOverlay');
+            if (overlaySettings.enabled) {
+                var rgba = hexToRgba(overlaySettings.color, overlaySettings.opacity);
+                overlay.css('background-color', rgba);
+            } else {
+                overlay.css('background-color', 'transparent');
+            }
+        }
+
+        // NEW: Helper function to convert hex to rgba
+        function hexToRgba(hex, alpha) {
+            var r = parseInt(hex.slice(1, 3), 16);
+            var g = parseInt(hex.slice(3, 5), 16);
+            var b = parseInt(hex.slice(5, 7), 16);
+            return 'rgba(' + r + ', ' + g + ', ' + b + ', ' + alpha + ')';
+        }
         // Function to download a single banner
         function downloadSingleBanner() {
             if ($('#getName').val() == '') {
@@ -592,6 +682,15 @@
                             // Draw the image with proper positioning
                             ctx.drawImage(img, bgPosX, bgPosY, scaledWidth, scaledHeight);
                             // Continue with the rest of the drawing
+
+                            if (overlaySettings.enabled) {
+                                ctx.save();
+                                ctx.globalAlpha = overlaySettings.opacity;
+                                ctx.fillStyle = overlaySettings.color;
+                                ctx.fillRect(0, 0, canvas.width, canvas.height);
+                                ctx.restore();
+                            }
+
                             drawBannerContents();
                         };
                         img.onerror = function(err) {
@@ -602,6 +701,15 @@
                         // Set the source last to trigger the load
                         img.src = backgroundImage;
                     } else {
+
+                        if (overlaySettings.enabled) {
+                                ctx.save();
+                                ctx.globalAlpha = overlaySettings.opacity;
+                                ctx.fillStyle = overlaySettings.color;
+                                ctx.fillRect(0, 0, canvas.width, canvas.height);
+                                ctx.restore();
+                        }
+                        
                         // Continue without background image
                         drawBannerContents();
                     }
@@ -747,7 +855,12 @@
                 mainTitleColor: $('#mainTitle').css('color'),
                 smallTitleColor: $('#smallTitle').css('color'),
                 blueBannerChecked: $('input.blueBanner').is(':checked'),
-                invertChecked: $('input.invert').is(':checked')
+                invertChecked: $('input.invert').is(':checked'),
+                overlaySettings: {
+                    color: overlaySettings.color,
+                    opacity: overlaySettings.opacity,
+                    enabled: overlaySettings.enabled
+                }
             };
             // Create zip instance
             var zip = new JSZip();
@@ -846,6 +959,14 @@
                 // Restore ALL checkbox states
                 $('input.blueBanner').prop('checked', state.blueBannerChecked);
                 $('input.invert').prop('checked', state.invertChecked);
+
+                // NEW: Restore overlay state
+                overlaySettings = state.overlaySettings;
+                $('#enableOverlay').prop('checked', overlaySettings.enabled);
+                $('#overlayColor').val(overlaySettings.color);
+                $('#overlayOpacity').val(overlaySettings.opacity);
+                $('#opacityValue').text(Math.round(overlaySettings.opacity * 100) + '%');
+                updateColorOverlay();
             }
             // Handle errors in promises
             Promise.all(promises).catch(function(error) {
@@ -864,14 +985,6 @@
     <div class="wrapper">
         <h1>APUS Banner Generator</h1>
 
-        <!-- Banner size controls -->
-        <div class="size-controls">
-            <label>Width:</label>
-            <input type="number" id="bannerWidth" value="1200" min="800" max="2000">
-            <label>Height:</label>
-            <input type="number" id="bannerHeight" value="400" min="200" max="800">
-        </div>
-
         <div id="image">
             <div class="centerText">
                 <div class="text">
@@ -883,9 +996,19 @@
                 </div>
             </div>
             <div id='imageBackground'></div>
+            <!-- NEW: Color overlay div -->
+            <div id="colorOverlay"></div>
             <div class="logo"></div>
         </div>
         <!--image-->
+
+        <!-- Banner size controls -->
+        <div class="size-controls">
+            <label>Width:</label>
+            <input type="number" id="bannerWidth" value="1200" min="800" max="2000">
+            <label>Height:</label>
+            <input type="number" id="bannerHeight" value="400" min="200" max="800">
+        </div>
 
         <form id="form">
             <div class="form-row">
@@ -927,6 +1050,26 @@
                     <label><input type="checkbox" id="hideLogo" name="hideLogo" class="hideLogo" value="HideLogo"> Hide
                         Logo</label>
                 </div>
+            </div>
+
+            <!-- NEW: Color Overlay Controls -->
+            <div class="overlay-controls">
+                <h3>Color Overlay</h3>
+                <div class="overlay-row">
+                    <label><input type="checkbox" id="enableOverlay"> Enable Overlay</label>
+                </div>
+                <div class="overlay-row">
+                    <label>Color:</label>
+                    <input type="color" id="overlayColor" value="#000000">
+                </div>
+                <div class="overlay-row">
+                    <label>Opacity:</label>
+                    <input type="range" id="overlayOpacity" min="0" max="1" step="0.1" value="0.3">
+                    <span id="opacityValue">30%</span>
+                </div>
+                <p style="color: #666; font-size: 0.9em; margin-top: 10px;">
+                    The color overlay will appear on top of the background image but below the text and logo.
+                </p>
             </div>
 
             <div class="form-row">
